Bug 417763 - Removing an entry from exluded folder will also rewrite "folders" entry in baloofilerc
Summary: Removing an entry from exluded folder will also rewrite "folders" entry in ba...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_baloo (other bugs)
Version First Reported In: 5.18.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: baloo-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-17 01:12 UTC by Christoph Vogtländer
Modified: 2020-03-24 20:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Vogtländer 2020-02-17 01:12:52 UTC
SUMMARY
removing and entry from the exclude folder using systemsettings, will not just remove the entry from "exclude folders[$e]" but also resets "folders[$e]" to "$HOME". Any custom set folders are removed.

STEPS TO REPRODUCE
1. add a custom entry in baloofilerc "folders[$e]=$HOME,/home/share/
1. remove an entry from the excluded folder list

OBSERVED RESULT
folders[$e] will be reset to "$HOME":
folders[$e]=$HOME

EXPECTED RESULT
The entry should be left as is. AFAIK, the GUI does not allow customisation of "folders[$e]"

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
(available in About System)
KDE Plasma Version: 5.28.0
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1
Comment 1 Stefan Brüns 2020-03-24 20:39:51 UTC
Git commit 7498b41a1979b084d05b99a51d3561eeef68e974 by Stefan Brüns.
Committed on 24/03/2020 at 20:39.
Pushed by bruns into branch 'master'.

[Baloo KCM] Complete overhaul of the include/exclude folder list

Summary:
The current "Excluded folders" list in the KCM is quite awkward:

1. It tries to mimic baloos automatic exclusion of external drives,
   but fails doing so and adds almost any external drive even when not
   mounted below an indexable path.

2. Deleting an autogenerated entry actually **adds** it to the included
   folder list, and then hides it.

3. There is no way to show the included folder list, or add any entries
   to it.

Remove the custom "excluded mounts" heuristic from the KCM and retrieve
the additional (not explicitly configured) excluded ones from baloo.

Replace the "excluded list" with a common list for included and excluded
folders, and flag its state. This also makes it easy to add additional
properties later.

Create a new UI delegate for each config list item, allowing to enable
and disable indexing for each entry. Make the "delete" actually always
delete a config entry, and make the control inline. Move the "Add" button
to the *right* bottom of the list (in accordance with UI guidelines) and
add some text to it.

Depends on D28024

Solves the following parts of T9879:
[x] Allow adding of includeFolders in the KCM
[x] Correctly show excludeFolders below explicit (non-$HOME) includeFolders in KCM
Related: bug 417762, bug 417170, bug 366521

Reviewers: #baloo, #vdg, ngraham, mart

Reviewed By: #baloo, #vdg, ngraham

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D28025

M  +119  -113  kcms/baloo/filteredfoldermodel.cpp
M  +18   -12   kcms/baloo/filteredfoldermodel.h
M  +76   -19   kcms/baloo/package/contents/ui/main.qml

https://commits.kde.org/plasma-desktop/7498b41a1979b084d05b99a51d3561eeef68e974